# gen-readme

./: Cargo.toml  README.md  readme-template.md
src/: args.rs  commands.rs  helpers.rs  main.rs
src/assets/: badges.md  configuration.md  contributing.md  contributors.md  cover.md  credits.md  description.md  howtorun.md  howtouse.md  installation.md  license.md  requirements.md  title.md
src/commands/: help.rs  skip.rs  version.rs
